--- a/test/python/webgpu/ort/requirements.txt
+++ b/test/python/webgpu/ort/requirements.txt
@@ -1,1 +1,2 @@
-onnxruntime==1.23.0
+# onnxruntime is provided via WebGPU-enabled DLLs from onnxruntime-node
+# Do not install onnxruntime here as it would override the WebGPU DLLs
