--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -24,8 +24,7 @@ FetchContent_MakeAvailable(CLI11)
 option(USE_CXX "Invoke the C++ example" ON)
 option(MODEL_CHAT "Build the Model Chat example" OFF)
 option(MODEL_QA "Build the Model Q&A example" OFF)
-option(MODEL_VISION "Build the Model Vision example" OFF)
-option(PHI4-MM "Build the Phi-4 mm example" OFF)
+option(MODEL_MM "Build the Model Multimodal example" OFF)
 option(WHISPER "Build the Whisper example" OFF)
 
 if(USE_CXX)
@@ -93,18 +92,11 @@ if(MODEL_QA)
   target_link_libraries(model_qa PRIVATE CLI11::CLI11)
 endif()
 
-if(MODEL_VISION)
-  add_executable(model_vision ${EXAMPLES_SOURCE_DIR}/model_vision.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
-  prepare_executable(model_vision)
-  target_link_libraries(model_vision PRIVATE nlohmann_json::nlohmann_json)
-  target_link_libraries(model_vision PRIVATE CLI11::CLI11)
-endif()
-
-if(PHI4-MM)
-  add_executable(phi4-mm ${EXAMPLES_SOURCE_DIR}/phi4-mm.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
-  prepare_executable(phi4-mm)
-  target_link_libraries(phi4-mm PRIVATE nlohmann_json::nlohmann_json)
-  target_link_libraries(phi4-mm PRIVATE CLI11::CLI11)
+if(MODEL_MM)
+  add_executable(model_mm ${EXAMPLES_SOURCE_DIR}/model_mm.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
+  prepare_executable(model_mm)
+  target_link_libraries(model_mm PRIVATE nlohmann_json::nlohmann_json)
+  target_link_libraries(model_mm PRIVATE CLI11::CLI11)
 endif()
 
 if(WHISPER)
