--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -157,7 +157,7 @@ jobs:
           dotnet build -c Release
           cd ../ModelVision
           dotnet build -c Release
-          cd ../HelloPhi4MM
+          cd ../ModelMM
           dotnet build -c Release
 
       - name: Test the C# LLM Example with Tool Calling
