--- a/examples/csharp/ModelMM/ModelMM.csproj
+++ b/examples/csharp/ModelMM/ModelMM.csproj
@@ -1,7 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <OutputType>Exe</OutputType>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Compile Include="../common/Common.cs" Link="Common/Common.cs" />
+    <Compile Include="../Common/Common.cs" Link="Common/Common.cs" />
   </ItemGroup>
 
 </Project>
