--- a/.github/workflows/win-webgpu-x64-build.yml
+++ b/.github/workflows/win-webgpu-x64-build.yml
@@ -145,6 +145,38 @@ jobs:
           python -m pip install -r test\python\webgpu\ort\requirements.txt
           python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
 
+      - name: Replace onnxruntime CPU DLLs with WebGPU DLLs in site-packages
+        shell: pwsh
+        run: |
+          Write-Host "Replacing onnxruntime CPU DLLs with WebGPU DLLs in Python site-packages..."
+
+          # Find onnxruntime package location
+          $ortLocation = python -c "import onnxruntime; import os; print(os.path.dirname(onnxruntime.__file__))"
+          Write-Host "onnxruntime package location: $ortLocation"
+
+          # Find the capi directory where DLLs are located
+          $capiDir = Join-Path $ortLocation "capi"
+          if (Test-Path $capiDir) {
+            Write-Host "`nReplacing DLLs in: $capiDir"
+
+            # Backup and replace
+            $dllsToCopy = @("onnxruntime.dll", "dxil.dll", "dxcompiler.dll")
+            foreach ($dll in $dllsToCopy) {
+              if (Test-Path "$env:GITHUB_WORKSPACE\ort\lib\$dll") {
+                Copy-Item "$env:GITHUB_WORKSPACE\ort\lib\$dll" $capiDir -Force
+                Write-Host "  Replaced: $dll"
+              }
+            }
+
+            Write-Host "`nFinal DLLs in onnxruntime package:"
+            Get-ChildItem "$capiDir\*.dll" | ForEach-Object {
+              Write-Host "  - $($_.Name) ($([math]::Round($_.Length / 1MB, 2)) MB)"
+            }
+          } else {
+            Write-Error "Could not find onnxruntime capi directory at: $capiDir"
+            exit 1
+          }
+
       - name: Run the Python Tests
         run: |
           python test/python/test_onnxruntime_genai.py --cwd "test\python" --test_models "test\test_models" --e2e
