--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -116,7 +116,7 @@ jobs:
         run: |
           cd examples\csharp\ModelChat
           dotnet build -c Release
-          cd ..\ModelVision
+          cd ..\ModelMM
           dotnet build -c Release
           cd ..\ModelMM
           dotnet build -c Release
