--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -126,7 +126,7 @@ jobs:
         run: |
           cd examples\csharp\ModelChat
           dotnet build -c Release
-          cd ..\ModelVision
+          cd ..\ModelMM
           dotnet build -c Release
           cd ..\ModelMM
           dotnet build -c Release
