--- a/.pipelines/stages/jobs/nuget-validation-job.yml
+++ b/.pipelines/stages/jobs/nuget-validation-job.yml
@@ -98,6 +98,16 @@ jobs:
     ${{ else }}:
       value: 'cpu_and_mobile/cpu-int4-rtn-block-32-acc-level-4'
 
+  - name: prebuild_phi4_mm_model_folder
+    ${{ if eq(parameters.ep, 'cpu') }}:
+      value: 'cpu_and_mobile/cpu-int4-rtn-block-32-acc-level-4'
+    ${{ elseif eq(parameters.ep, 'cuda') }}:
+      value: 'gpu/gpu-int4-rtn-block-32'
+    ${{ elseif eq(parameters.ep, 'directml')}}:
+      value: 'gpu/gpu-int4-rtn-block-32'
+    ${{ else }}:
+      value: 'cpu_and_mobile/cpu-int4-rtn-block-32-acc-level-4'
+
   - name: cuda_docker_image
     ${{ if eq(parameters.cuda_version, '11.8') }}:
       value: onnxruntimebuildcache.azurecr.io/internal/azureml/onnxruntime/build/cuda11_x64_almalinux8_gcc11:20250714.2
@@ -175,18 +185,18 @@ jobs:
   - template: steps/utils/download-huggingface-model.yml
     parameters:
       HuggingFaceRepo: 'microsoft/Phi-4-multimodal-instruct-onnx'
-      LocalFolder: 'model-mm'
-      RepoFolder: $(prebuild_model_mm_model_folder)
-      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/Phi4MM'
+      LocalFolder: 'phi4-mm'
+      RepoFolder: $(prebuild_phi4_mm_model_folder)
+      WorkingDirectory: '$(Build.Repository.LocalPath)/examples/csharp/ModelMM'
       HuggingFaceToken: $(HF_TOKEN)
       os: ${{ parameters.os }}
 
   - template: steps/nuget-validation-step.yml
     parameters:
-      CsprojFolder: "examples/csharp/Phi4MM"
-      CsprojName: "Phi4MM"
+      CsprojFolder: "examples/csharp/ModelMM"
+      CsprojName: "ModelMM"
       CsprojConfiguration: $(csproj_configuration)
-      LocalFolder: 'model-mm'
-      ModelFolder: $(prebuild_model_mm_model_folder)
+      LocalFolder: 'phi4-mm'
+      ModelFolder: $(prebuild_phi4_mm_model_folder)
 
   - template: steps/compliant-and-cleanup-step.yml
