--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -31,42 +31,63 @@ if(USE_CXX)
   add_compile_definitions(USE_CXX)
 endif()
 
+# Set expected library filenames
 if(WIN32)
-  set(ONNXRUNTIME_GENAI_LIB "onnxruntime-genai.dll")
+  set(ORT_LIB_FILE "onnxruntime.dll")
+  set(OGA_LIB_FILE "onnxruntime-genai.dll")
 elseif(APPLE)
-  set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.dylib")
+  set(ORT_LIB_FILE "libonnxruntime.dylib")
+  set(OGA_LIB_FILE "libonnxruntime-genai.dylib")
 elseif(CMAKE_SYSTEM_NAME MATCHES "AIX")
-  set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.a")
+  set(ORT_LIB_FILE "libonnxruntime.a")
+  set(OGA_LIB_FILE "libonnxruntime-genai.a")
 else()
-  set(ONNXRUNTIME_GENAI_LIB "libonnxruntime-genai.so")
+  set(ORT_LIB_FILE "libonnxruntime.so")
+  set(OGA_LIB_FILE "libonnxruntime-genai.so")
 endif()
 
-# Set default library directory if not specified
-if(NOT ORT_GENAI_LIB_DIR)
-  set(ORT_GENAI_LIB_DIR "${CMAKE_SOURCE_DIR}/lib")
+# Set default variables to examples/c/include and examples/c/lib if not specified
+if(NOT ORT_INCLUDE_DIR)
+  set(ORT_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
+endif()
+if(NOT OGA_INCLUDE_DIR)
+  set(OGA_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include")
+endif()
+if(NOT ORT_LIB_DIR)
+  set(ORT_LIB_DIR "${CMAKE_SOURCE_DIR}/lib")
+endif()
+if(NOT OGA_LIB_DIR)
+  set(OGA_LIB_DIR "${CMAKE_SOURCE_DIR}/lib")
 endif()
 
-file(GLOB ort_genai_libs "${ORT_GENAI_LIB_DIR}/*")
-
-message(STATUS "ORT_GENAI_LIB_DIR: ${ORT_GENAI_LIB_DIR}")
-message(STATUS "ORT GenAI libs found:")
-foreach(DEP_FILE ${ort_genai_libs})
-  message(STATUS "  ${DEP_FILE}")
-endforeach()
+# Store all library files in each directory
+file(GLOB ort_libs "${ORT_LIB_DIR}/*")
+file(GLOB oga_libs "${OGA_LIB_DIR}/*")
 
 function(prepare_executable executable)
-  target_link_directories(${executable} PRIVATE ${ORT_GENAI_LIB_DIR})
-  target_link_libraries(${executable} PRIVATE ${ONNXRUNTIME_GENAI_LIB})
+  # Link directory and library for ORT and ORT GenAI
+  target_link_directories(${executable} PRIVATE ${ORT_LIB_DIR})
+  target_link_libraries(${executable} PRIVATE ${ORT_LIB_FILE})
+  target_link_directories(${executable} PRIVATE ${OGA_LIB_DIR})
+  target_link_libraries(${executable} PRIVATE ${OGA_LIB_FILE})
 
-  if (ORT_GENAI_INCLUDE_DIR)
-    target_include_directories(${executable} PRIVATE ${ORT_GENAI_INCLUDE_DIR})
-  else()
-    target_include_directories(${executable} PRIVATE ${CMAKE_SOURCE_DIR}/include)
-  endif()
+  # Add include directories for each executable
+  target_include_directories(${executable} PRIVATE ${ORT_INCLUDE_DIR})
+  target_include_directories(${executable} PRIVATE ${OGA_INCLUDE_DIR})
 
+  target_link_libraries(${executable} PUBLIC onnxruntime)
   target_link_libraries(${executable} PUBLIC onnxruntime-genai)
 
-  foreach(DEPENDENCY_FILE ${ort_genai_libs})
+  foreach(DEPENDENCY_FILE ${ort_libs})
+    if (NOT IS_DIRECTORY ${DEPENDENCY_FILE})
+      add_custom_command(
+        TARGET ${executable} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different ${DEPENDENCY_FILE} $<TARGET_FILE_DIR:${executable}>
+      )
+    endif()
+  endforeach()
+
+  foreach(DEPENDENCY_FILE ${oga_libs})
     if (NOT IS_DIRECTORY ${DEPENDENCY_FILE})
       add_custom_command(
         TARGET ${executable} POST_BUILD
