--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,6 +133,13 @@ if(ENABLE_TESTS)
   else()
     add_compile_definitions(TEST_PHI2=0)
   endif()
+
+  if (USE_WEBGPU)
+    add_compile_definitions(USE_WEBGPU=1)
+  else()
+    add_compile_definitions(USE_WEBGPU=0)
+  endif()
+
 endif()
 
 if(ENABLE_TRACING)
