Add `enable_profiling` in Runtime Options (#1949)
# Background
Previously, developers could only enable profiling through
genai_config.json, which profiles the entire lifetime of a session—from
session creation to session destruction. When the number of runs is
large (for example, generating ~3000 tokens during inference), the
profiling output can become excessively large, causing profiling to fail
due to oversized files.

> 2025-12-17 11:17:36.496 Python[9861:2179219] 2025-12-17
11:17:36.493043 [E:onnxruntime:onnxruntime-genai, profiler.cc:93
EndTimeAndRecordEvent] Maximum number of events reached, could not
record profile event.

# Description
This PR addresses this limitation by introducing run-level profiling. We
expose `enable_profiling` in `RuntimeOptions`. Developers can now enable
profiling for specific runs only.

With the following code, two profiling JSON files will be generated
using the `run_profiler_file` prefix:
	•	one containing profiling data for the 100th run
	•	another containing profiling data for the 101th run

```
while not generator.is_done():
    if len(new_tokens) == 100 or len(new_tokens) == 101 :
        generator.set_runtime_option("enable_profiling", "run_profiler_file")
    else:
        generator.set_runtime_option("enable_profiling", "0")
    generator.generate_next_token()
    new_token = generator.get_next_tokens()[0]
    new_tokens.append(new_token)
```

--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -39,6 +39,11 @@ jobs:
         with:
           gradle-version: '8.6'
 
+      - uses: actions/setup-python@v6
+        with:
+          python-version: '3.11.x'
+          architecture: 'x64'
+
       - uses: microsoft/onnxruntime-github-actions/setup-build-tools@v0.0.8
         with:
           vcpkg-version: '2025.03.19'
