--- a/cmake/presets/CMakeLinuxDefaultConfigPresets.json
+++ b/cmake/presets/CMakeLinuxDefaultConfigPresets.json
@@ -28,7 +28,7 @@
       "inherits": "linux_gcc_default",
       "cacheVariables": {
         "USE_CUDA": "ON",
-        "CMAKE_CUDA_ARCHITECTURES": "60;61;70;75;80;86"
+        "CMAKE_CUDA_ARCHITECTURES": "60-real;70-real;75-real;80-real;86-real;90-real;100-real;120-real"
       }
     },
     {
