--- a/.pipelines/stages/jobs/py-validation-job.yml
+++ b/.pipelines/stages/jobs/py-validation-job.yml
@@ -153,6 +153,10 @@ jobs:
     displayName: Copy python 3.11.0 version to agent tools directory
     condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'), eq(variables['py_dot_ver'], '3.11'))
 
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '22.x'
+
   - task: UsePythonVersion@0
     inputs:
       versionSpec: $(py_dot_ver)
