--- a/.pipelines/stages/jobs/py-packaging-job.yml
+++ b/.pipelines/stages/jobs/py-packaging-job.yml
@@ -142,6 +142,10 @@ jobs:
     displayName: Copy python 3.11.0 version to agent tools directory
     condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'), eq(variables['PyDotVer'], '3.11'))
 
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '22.x'
+
   - task: UsePythonVersion@0
     inputs:
       versionSpec: $(PyDotVer)
