--- a/.pipelines/stages/jobs/winml-nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/winml-nuget-packaging-job.yml
@@ -118,6 +118,10 @@ jobs:
           dir /s /b *.dll
         workingDirectory: '$(Build.BinariesDirectory)/artifact-downloads'
 
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '22.x'
+
       - task: UsePythonVersion@0
         inputs:
           versionSpec: 3.11
