--- a/.pipelines/stages/jobs/capi-packaging-job.yml
+++ b/.pipelines/stages/jobs/capi-packaging-job.yml
@@ -31,7 +31,7 @@ jobs:
         name: 'onnxruntime-genai-Ubuntu2004-ARM-CPU'
         hostArchitecture: 'Arm64'
       ${{ else }}:
-        name: 'nnxruntime-Ubuntu2204-AMD-CPU'
+        name: 'onnxruntime-Ubuntu2204-AMD-CPU'
       os: linux
   ${{ if eq(parameters.os, 'win') }}:
     pool:
@@ -40,6 +40,8 @@ jobs:
       ${{ elseif eq(parameters.arch, 'arm64') }}:
         name: 'onnxruntime-genai-windows-vs-2022-arm64'
         hostArchitecture: 'Arm64'
+        demands:
+          - Agent.Version -equals 4.264.2
       ${{ else }}:
         name: 'onnxruntime-Win-CPU-2022'
       os: windows
@@ -86,10 +88,6 @@ jobs:
       DIR "C:\Python"
     displayName: Copy python 3.11.0 version to agent tools directory
     condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'))
-
-  - task: NodeTool@0
-    inputs:
-      versionSpec: '22.x'
 
   - task: UsePythonVersion@0
     inputs:
