--- a/.pipelines/stages/jobs/nuget-validation-job.yml
+++ b/.pipelines/stages/jobs/nuget-validation-job.yml
@@ -42,6 +42,8 @@ jobs:
         pool: 'onnxruntime-Win-CPU-2022'
     ${{ elseif eq(parameters.arch, 'arm64') }}:
       pool: 'onnxruntime-genai-windows-vs-2022-arm64'
+      demands:
+        - Agent.Version -equals 4.264.2
     ${{ else }}:
       pool: 'onnxruntime-Win-CPU-2022'
   ${{ if eq(parameters.os, 'osx') }}:
@@ -129,10 +131,6 @@ jobs:
     condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'))
 
   - task: NuGetAuthenticate@1
-
-  - task: NodeTool@0
-    inputs:
-      versionSpec: '22.x'
 
   - task: UsePythonVersion@0
     inputs:
