--- a/.pipelines/stages/jobs/py-packaging-job.yml
+++ b/.pipelines/stages/jobs/py-packaging-job.yml
@@ -48,6 +48,8 @@ jobs:
         name: 'onnxruntime-Win-CPU-2022'
       ${{ elseif eq(parameters.arch, 'arm64') }}:
         name: 'onnxruntime-genai-windows-vs-2022-arm64'
+        demands:
+          - Agent.Version -equals 4.264.2
       ${{ else }}:
         name: 'onnxruntime-Win-CPU-2022'
       os: windows
@@ -141,10 +143,6 @@ jobs:
       DIR "C:\Python"
     displayName: Copy python 3.11.0 version to agent tools directory
     condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'), eq(variables['PyDotVer'], '3.11'))
-
-  - task: NodeTool@0
-    inputs:
-      versionSpec: '22.x'
 
   - task: UsePythonVersion@0
     inputs:
