Update cmake cuda architecture and use win-arm64 pool workaround (#1976)
Updates the cuda architectures being built by default in ort-genai so we
can support newer sms (like rtx 5090)

--- a/.pipelines/stages/jobs/nuget-validation-job.yml
+++ b/.pipelines/stages/jobs/nuget-validation-job.yml
@@ -42,6 +42,8 @@ jobs:
         pool: 'onnxruntime-Win-CPU-2022'
     ${{ elseif eq(parameters.arch, 'arm64') }}:
       pool: 'onnxruntime-genai-windows-vs-2022-arm64'
+      demands:
+        - Agent.Version -equals 4.264.2
     ${{ else }}:
       pool: 'onnxruntime-Win-CPU-2022'
   ${{ if eq(parameters.os, 'osx') }}:
