--- a/.pipelines/stages/jobs/py-packaging-job.yml
+++ b/.pipelines/stages/jobs/py-packaging-job.yml
@@ -48,6 +48,8 @@ jobs:
         name: 'onnxruntime-Win-CPU-2022'
       ${{ elseif eq(parameters.arch, 'arm64') }}:
         name: 'onnxruntime-genai-windows-vs-2022-arm64'
+        demands:
+          - Agent.Version -equals 4.264.2
       ${{ else }}:
         name: 'onnxruntime-Win-CPU-2022'
       os: windows
